test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/valid/type_before_storage_class.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[3]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: foo
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 3
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        CStatic: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: bar
        CSingleInit: 
          CConstant: 
            CConstInt: 
              TInt: 4
            None: 
          None: 
        Int: 
        CStatic: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CFunDecl: 
                CFunctionDeclaration: 
                  TIdentifier: foo
                  List[0]: 
                  None: 
                  FunType: 
                    TULong: 67108864
                    TULong: 67108864
                    List[0]: 
                    Int: 
                  CExtern: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: bar
                  None: 
                  Int: 
                  CExtern: 
            CS: 
              CReturn: 
                CBinary: 
                  CAdd: 
                  CFunctionCall: 
                    TIdentifier: foo
                    List[0]: 
                    None: 
                  CVar: 
                    TIdentifier: bar
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
