test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/invalid_types/redeclare_fun_as_var.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: foo
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[2]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: foo
                  None: 
                  Int: 
                  CExtern: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
